--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.facebook.presto.hadoop</groupId>
     <artifactId>hadoop-cdh4</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
 
     <name>hadoop-cdh4</name>
     <description>Shaded version of CDH4 Hadoop for Presto</description>
@@ -23,7 +23,7 @@
     <scm>
         <connection>scm:git:git://github.com/facebook/presto-hadoop-cdh4.git</connection>
         <url>https://github.com/facebook/presto-hadoop-cdh4</url>
-        <tag>0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
