--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.facebook.presto.hadoop</groupId>
     <artifactId>hadoop-cdh4</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
 
     <name>hadoop-cdh4</name>
     <description>Shaded version of CDH4 Hadoop for Presto</description>
@@ -34,7 +34,7 @@
         <connection>scm:git:git://github.com/facebook/presto-hadoop-cdh4.git</connection>
         <developerConnection>scm:git:git://github.com/facebook/presto-hadoop-cdh4.git</developerConnection>
         <url>https://github.com/facebook/presto-hadoop-cdh4</url>
-        <tag>HEAD</tag>
+        <tag>0.3</tag>
     </scm>
 
     <properties>
@@ -451,7 +451,7 @@
                             <createSourcesJar>true</createSourcesJar>
                             <keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                             </transformers>
                             <relocations>
                                 <relocation>
