--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.facebook.presto.hadoop</groupId>
     <artifactId>hadoop-cdh4</artifactId>
-    <version>0.3</version>
+    <version>0.4-SNAPSHOT</version>
 
     <name>hadoop-cdh4</name>
     <description>Shaded version of CDH4 Hadoop for Presto</description>
@@ -34,7 +34,7 @@
         <connection>scm:git:git://github.com/facebook/presto-hadoop-cdh4.git</connection>
         <developerConnection>scm:git:git://github.com/facebook/presto-hadoop-cdh4.git</developerConnection>
         <url>https://github.com/facebook/presto-hadoop-cdh4</url>
-        <tag>0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
